src/test/ui/structs/struct-fields-hints-no-dupe.stderr
error[E0560]: struct `A` has no field named `bar`
  --> $DIR/struct-fields-hints-no-dupe.rs:10:9
   |
LL |         bar : 42,
   |         ^^^ help: a field with a similar name exists: `barr`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0560`.
